--- a/Class_5/Module5_Feature_Engineering.ipynb
+++ b/Class_5/Module5_Feature_Engineering.ipynb
@@ -18,9 +18,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: scikit-learn in /Users/jiawenli/anaconda3/lib/python3.10/site-packages (1.2.1)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/jiawenli/anaconda3/lib/python3.10/site-packages (from scikit-learn) (2.2.0)\n",
       "Requirement already satisfied: numpy>=1.17.3 in /Users/jiawenli/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.23.5)\n",
       "Requirement already satisfied: joblib>=1.1.1 in /Users/jiawenli/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.1.1)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/jiawenli/anaconda3/lib/python3.10/site-packages (from scikit-learn) (2.2.0)\n",
       "Requirement already satisfied: scipy>=1.3.2 in /Users/jiawenli/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.10.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "4  20.945017   49           67.864721  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "[1000 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "4 -0.772500  1.500282  0.797973  0.753864  1.115887 -0.730499  0.036682"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "4 -0.772500  1.500282"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "4        75        0.0       0           1      1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
        "4               0-10  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1159,24 +1159,20 @@
        "      <th>humidity</th>\n",
        "      <th>windspeed</th>\n",
        "      <th>casual</th>\n",
-       "      <th>...</th>\n",
+       "      <th>registered</th>\n",
        "      <th>count</th>\n",
        "      <th>hour</th>\n",
        "      <th>month</th>\n",
        "      <th>day</th>\n",
        "      <th>rental_total_group</th>\n",
        "      <th>day_type</th>\n",
-       "      <th>fall</th>\n",
-       "      <th>spring</th>\n",
-       "      <th>summer</th>\n",
-       "      <th>winter</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2011-01-01 00:00:00</td>\n",
-       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1185,22 +1181,18 @@
        "      <td>81</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3</td>\n",
-       "      <td>...</td>\n",
+       "      <td>13</td>\n",
        "      <td>16</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>10-50</td>\n",
        "      <td>good day</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2011-01-01 01:00:00</td>\n",
-       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1209,22 +1201,18 @@
        "      <td>80</td>\n",
        "      <td>0.0</td>\n",
        "      <td>8</td>\n",
-       "      <td>...</td>\n",
+       "      <td>32</td>\n",
        "      <td>40</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>10-50</td>\n",
        "      <td>good day</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2011-01-01 02:00:00</td>\n",
-       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1233,22 +1221,18 @@
        "      <td>80</td>\n",
        "      <td>0.0</td>\n",
        "      <td>5</td>\n",
-       "      <td>...</td>\n",
+       "      <td>27</td>\n",
        "      <td>32</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>10-50</td>\n",
        "      <td>good day</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2011-01-01 03:00:00</td>\n",
-       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1257,22 +1241,18 @@
        "      <td>75</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3</td>\n",
-       "      <td>...</td>\n",
+       "      <td>10</td>\n",
        "      <td>13</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>10-50</td>\n",
        "      <td>good day</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2011-01-01 04:00:00</td>\n",
-       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1281,49 +1261,42 @@
        "      <td>75</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0-10</td>\n",
        "      <td>good day</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "             datetime  season  holiday  workingday  weather  temp   atemp  \\\n",
-       "0 2011-01-01 00:00:00  winter        0           0        1  9.84  14.395   \n",
-       "1 2011-01-01 01:00:00  winter        0           0        1  9.02  13.635   \n",
-       "2 2011-01-01 02:00:00  winter        0           0        1  9.02  13.635   \n",
-       "3 2011-01-01 03:00:00  winter        0           0        1  9.84  14.395   \n",
-       "4 2011-01-01 04:00:00  winter        0           0        1  9.84  14.395   \n",
+       "0 2011-01-01 00:00:00       1        0           0        1  9.84  14.395   \n",
+       "1 2011-01-01 01:00:00       1        0           0        1  9.02  13.635   \n",
+       "2 2011-01-01 02:00:00       1        0           0        1  9.02  13.635   \n",
+       "3 2011-01-01 03:00:00       1        0           0        1  9.84  14.395   \n",
+       "4 2011-01-01 04:00:00       1        0           0        1  9.84  14.395   \n",
        "\n",
-       "   humidity  windspeed  casual  ...  count  hour  month  day  \\\n",
-       "0        81        0.0       3  ...     16     0      1    1   \n",
-       "1        80        0.0       8  ...     40     1      1    1   \n",
-       "2        80        0.0       5  ...     32     2      1    1   \n",
-       "3        75        0.0       3  ...     13     3      1    1   \n",
-       "4        75        0.0       0  ...      1     4      1    1   \n",
+       "   humidity  windspeed  casual  registered  count  hour  month  day  \\\n",
+       "0        81        0.0       3          13     16     0      1    1   \n",
+       "1        80        0.0       8          32     40     1      1    1   \n",
+       "2        80        0.0       5          27     32     2      1    1   \n",
+       "3        75        0.0       3          10     13     3      1    1   \n",
+       "4        75        0.0       0           1      1     4      1    1   \n",
        "\n",
-       "   rental_total_group  day_type fall  spring  summer  winter  \n",
-       "0               10-50  good day    0       0       0       1  \n",
-       "1               10-50  good day    0       0       0       1  \n",
-       "2               10-50  good day    0       0       0       1  \n",
-       "3               10-50  good day    0       0       0       1  \n",
-       "4                0-10  good day    0       0       0       1  \n",
-       "\n",
-       "[5 rows x 21 columns]"
+       "  rental_total_group  day_type  \n",
+       "0              10-50  good day  \n",
+       "1              10-50  good day  \n",
+       "2              10-50  good day  \n",
+       "3              10-50  good day  \n",
+       "4               0-10  good day  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1490,7 @@
        "4               0-10  good day  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1528,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1538,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1590,7 @@
        "4     0       0       0       1"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1628,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1637,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1835,7 +1808,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
